--- a/templates/admin/admin_index.html
+++ b/templates/admin/admin_index.html
@@ -16,7 +16,7 @@
                         <div class="card-body"><b>Managers</b></div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
                             <h4 class="mb-0">{{ manager_count }}</h4>
-                            <div class="small text-white"><i class="fas fa-users"></i></div>
+                            <div class="small text-white"><i class="fas fa-user-tie"></i></div>
                             <a class="small text-white stretched-link" href="{{ url_for('manager.get_managers') }}">View Details</a>
                             <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                         </div>
@@ -29,7 +29,7 @@
                         <div class="card-body"><b>Super Distributors</b></div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
                             <h4 class="mb-0">{{ super_distributor_count }}</h4>
-                            <div class="small text-white"><i class="fas fa-user-tie"></i></div>
+                            <div class="small text-white"><i class="fas fa-network-wired"></i></div>
                             <a class="small text-white stretched-link" href="{{ url_for('super_distributor.all_super_distributor') }}">View Details</a>
                             <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                         </div>
@@ -42,7 +42,7 @@
                         <div class="card-body"><b>Distributors</b></div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
                             <h4 class="mb-0">{{ distributor_count }}</h4>
-                            <div class="small text-white"><i class="fas fa-truck"></i></div>
+                            <div class="small text-white"><i class="fas fa-truck-loading"></i></div>
                             <a class="small text-white stretched-link" href="{{ url_for('distributor.all_distributor') }}">View Details</a>
                             <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                         </div>
