--- a/templates/kitchen/kitchen_header.html
+++ b/templates/kitchen/kitchen_header.html
@@ -42,7 +42,7 @@
                         <!--   <li><a class="dropdown-item" href="#!">Settings</a></li>
                         <li><a class="dropdown-item" href="#!">Activity Log</a></li> --> 
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="{{ url_for('admin_bp.logout') }}">Logout</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('admin_bp.logout') }}">Logout <i class="fa fa-sign-out" style="margin-left:30px ;"></i></a></li>
                     </ul>
                 </li>
             </ul>
