--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -81,7 +81,7 @@
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="index.html">FDA</a>
+            <a class="navbar-brand ps-3" href="{{ url_for('distributor.distributor_home')}}">FDA</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
@@ -99,7 +99,7 @@
                         <!--   <li><a class="dropdown-item" href="#!">Settings</a></li>
                         <li><a class="dropdown-item" href="#!">Activity Log</a></li> --> 
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="{{ url_for('admin_bp.logout') }}">Logout <i class="fa fa-sign-out" style="margin-left:30px ;"></i></a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('admin_bp.logout') }}">Logout <i class="fa fa-sign-out" style="margin-left:50% ;"></i></a></li>
                     </ul>
                 </li>
             </ul>
